# wt_dm_api

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  docker-compose.yml
assets/: commits.txt
k6-tests/: files.js  files_zip.js
routing_docs/: Routes.md
routing_docs/.obsidian/: workspace.json
src/: app_state.rs  error.rs  eyre_error_translation.rs  file.rs  files.rs  get_vromfs.rs  loki_tracing.rs  main.rs  vromf_enum.rs  wait_ready.rs
src/endpoints/: files.rs  get_vromfs.rs  health.rs  mod.rs  versions.rs
src/unpacking/: binary_vromfs.rs  mod.rs
