[package]
name = "wt_dm_api"
version = "0.1.0"
edition = "2021"
authors = ["FlareFlo"]
license = "Apache-2.0"

[dependencies]
http = "1.1.0"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "sync"] }
tracing-subscriber = "0.3.18"
axum = "0.7.6"
octocrab = "0.40.0"
lru = "0.12.4"
wt_version = "0.1.1"
reqwest = "0.12.7"
serde_json = "1.0.128"
tracing = "0.1.40"
base64 = "0.22.1"
color-eyre = "0.6.3"

wt_blk = { git = "https://github.com/Warthunder-Open-Source-Foundation/wt_blk.git", version = "0.2.3" }
dashmap = "6.1.0"
strum = { version = "0.26.3", features = ["derive"] }

utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-scalar = { version = "0.1", features = ["axum"] }

[profile.dev]
opt-level = 2

[features]
dev-cache = []