[package]
name = "wt_dm_api"
version = "0.1.0"
edition = "2021"
authors = ["FlareFlo"]
license = "Apache-2.0"

[dependencies]
http = "1.1.0"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "sync", "signal"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
axum = "0.7.6"
octocrab = "0.40.0"
wt_version = "0.1.1"
reqwest = { version = "0.12.8", features = ["rustls-tls"], default-features = false }
serde_json = "1.0.128"
tracing = "0.1.40"
base64 = "0.22.1"
color-eyre = "0.6.3"

wt_blk = { git = "https://github.com/Warthunder-Open-Source-Foundation/wt_blk.git", version = "0.2.3" }
dashmap = "6.1.0"
strum = { version = "0.26.3", features = ["derive"] }

utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-scalar = { version = "0.1", features = ["axum"] }
arc-swap = "1.7.1"

# Optionals
console-subscriber = { version = "0.4.0", optional = true }
rayon = "1.10.0"
futures = { version = "0.3.31", features = ["thread-pool"] }

[profile.dev]
#opt-level = 2

[features]
developement = ["dev-cache", "tokio-console", "console-subscriber"]
dev-cache = []
tokio-console = []
